fix(safari icons): Use width/height 100% for icons to render on Safari PE-176

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
     display: flex;
 }
 
+svg {
+    width: 100%;
+    height: 100%;
+}
+
 ul {
     list-style: none;
 }
